# seirina

./: .gitignore  CMakeLists.txt  Design.md  Makefile  Readme.md  cmaj.c  play.sh  wave.c
Seirina/: Adsr.cc  Adsr.h  AdsrTransform.cc  AdsrTransform.h  AudioFrame.cc  AudioFrame.h  AudioSample.cc  AudioSample.h  CMakeLists.txt  Doxygen.dox  Doxygen.h  Frequency.cc  Frequency.h  Note.cc  Note.h  Octave.cc  Octave.h  OutputStream.cc  OutputStream.h  Phase.h  PitchClass.h  PlayedNote.cc  PlayedNote.h  SampleDuration.h  SampleIndex.cc  SampleIndex.h  SampleRate.cc  SampleRate.h  Silence.cc  Silence.h  SimpleWaves.cc  SimpleWaves.h  SonicEvent.h  SynthNote.cc  SynthNote.h  Tempo.cc  Tempo.h  Timbre.cc  Timbre.h  WaveFile.cc  (+2 more)
Seirina/Audio/: Adsr.cc  Adsr.h  AdsrTransform.cc  AdsrTransform.h  AudioEvent.h  AudioFrame.cc  AudioFrame.h  Frequency.cc  Frequency.h  Output.h  Phase.cc  SampleDuration.cc  SampleRate.cc  Silence.cc  Silence.h  SimpleWaves.cc  SimpleWaves.h  SynthNote.cc  SynthNote.h  WaveForm.h
Seirina/Notation/: Duration.cc  Note.cc  Note.h  PitchClass.cc  Rest.cc  Rest.h  Tuning.cc  Tuning.h
Seirina/include/Seirina/: AdsrEnvelope.h  AdsrTransform.h  AdsrTransformer.h  AudioEvent.h  AudioFrame.h  AudioSample.h  Duration.h  Frequency.h  Note.h  NoteDuration.h  Octave.h  Output.h  Phase.h  PitchClass.h  Project.h  Rational.h  Rest.h  RollLine.h  SampleDuration.h  SampleIndex.h  SampleRate.h  Silence.h  SimpleWaves.h  SynthNote.h  SynthTimbre.h  Tempo.h  Timbre.h  Tuning.h  Voice.h  WaveForm.h
Seirina/src/: Adsr.cc  AdsrEnvelope.cc  AdsrTransform.cc  AdsrTransformer.cc  AudioFrame.cc  AudioSample.cc  Duration.cc  Frequency.cc  Note.cc  NoteDuration.cc  Octave.cc  Phase.cc  PitchClass.cc  Project.cc  Rational.cc  Rest.cc  RollLine.cc  SampleDuration.cc  SampleIndex.cc  SampleRate.cc  Silence.cc  SimpleWaves.cc  SynthNote.cc  SynthTimbre.cc  Tempo.cc  Timbre.cc  Tuning.cc  Voice.cc
Seirina/src/Audio/: SampleIndex.cc  SampleRate.cc  SimpleWaves.cc
Seirina/src/Notation/: Duration.cc  Note.cc  PitchClass.cc  Tempo.cc
genwav/: CMakeLists.txt  InputParser.cc  InputParser.h  RollParser.cc  RollParser.h  WaveFile.cc  WaveFile.h  genwav.cc
src/: Adsr.cc  Adsr.h  AudioFrame.cc  AudioFrame.h  CMakeLists.txt  InputParser.cc  InputParser.h  Makefile  Mpc.cc  Note.cc  Note.h  OutputStream.cc  OutputStream.h  PlayedNote.cc  PlayedNote.h  Rest.cc  Rest.h  Silence.cc  Timbre.cc  Timbre.h  WaveFile.cc  WaveFile.h  WaveFile.hh  Waves.h  cmaj.c  cmaj.cc  genwav.cc  mary.c  mary.cc  output.c  output.h  waves.c  waves.cc  waves.h  waves.hh
tests/: CMakeLists.txt  test_rational.cc
